more CSS again...

--- a/public/index-design.html
+++ b/public/index-design.html
@@ -20,6 +20,7 @@
         <section class="section-container">
             <div class="input-container">
                 Add your new to-do list item <input class="input" placeholder="Put a new task here!">
+                <button class="add-button">Add</button>
             </div>
 
             <div class="item-container">
