trying to figure this out

--- a/public/index-design.html
+++ b/public/index-design.html
@@ -22,19 +22,22 @@
                 Add your new to-do list item <input class="input" placeholder="Put a new task here!">
                 <button class="add-button">Add</button>
             </div>
+        </section>
 
-            <div class="item-container">
-                <h2 class="item-header">Complete my code challenge</h2>
+        <ul>
+            <li class="item-container">
+                <h2 class="item-header"><span class="completed">Complete my code challenge</span></h2>
                 <button class="complete-button">Complete</button>
                 <button class="delete-button">Delete</button>
-            </div>
+            </li>
 
-            <div class="item-container">
+            <li class="item-container">
                 <h2 class="item-header">Go to the grocery store...</h2>
                 <button class="complete-button">Complete</button>
                 <button class="delete-button">Delete</button>
-            </div>
+            </li>
 
+        </ul>
         </section>
 
     </main>
