a lot of progress on writing necessary code

--- a/public/index-design.html
+++ b/public/index-design.html
@@ -17,11 +17,14 @@
 
     </header>
     <main>
-        <section class="section-container">
-            <div class="input-container">
-                Add your new to-do list item <input class="input" placeholder="Put a new task here!">
-                <button class="add-button">Add</button>
-            </div>
+        <section class="input-form-section">
+            <form class="section-container">
+                <div class="input-container">
+                    Add your new to-do list item <input class="input" placeholder="Put a new task here!">
+                    <button class="add-button">Add</button>
+                </div>
+                <p class="error">Example error</p>
+            </form>
         </section>
 
         <ul>
