--- a/public/auth.html
+++ b/public/auth.html
@@ -10,7 +10,7 @@
     <title>To-Do</title>
 </head>
 <body>
-    <div id="root-auth">
+    <div>
     </div>
     <script type="module" src="src/auth.js"></script>
 </body>
